6755905: Changes for openjdk6 build 04 6628175: NetBeans/OpenJDK projects should support generated sources 6598089: JDK 7: AWT often goes into busy loop when showing dialog 6612531: api/javax_swing/ScrollPaneLayout/index.html#xxxLayoutSize[ScrollPaneLayout2024] throws NPE 6550267: Debugging some NetBeans/OpenJDK project's demo apps does not work 6610014: Allow partial open jdk builds without access to binary plugs 6643627: JMX source code includes incorrect Java code 6652042: NetBeans JConsole project should run tests against JAR built by project 6652053: Rename NetBeans project from j2se to jdk 6653678: NetBeans JDK projects README file should be release-agnostic 6654456: OpenJDK build problem with freetype makefiles 6654903: OpenJDK NetBeans projects should ony run appropriate tests 6658909: A few more SCCS keyword cleanups and whitespace processing 6616089: Whitespace cleanup on all sources Summary: Final b04 state (as defined by the source bundle) Reviewed-by: darcy